utilities/k8s-docker-registry/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-registry
  namespace: docker-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-registry-server
  template:
    metadata:
      labels:
        app: docker-registry-server
    spec:
      securityContext:
            fsGroup: 1000 
            runAsUser: 1000
      serviceAccountName: docker-registry-admin
      containers:
        - name: docker-registry
          image: registry:2
          resources:
            limits:
              memory: "2Gi"
              cpu: "1000m"
            requests:
              memory: "500Mi"
              cpu: "500m"
          ports:
            - name: httpport
              containerPort: 5000
          livenessProbe:
            httpGet:
              path: "/"
              port: 5000
            initialDelaySeconds: 90
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: "/"
              port: 5000
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          volumeMounts:
            - name: docker-registry-data
              mountPath: /var/lib/registry
            - name: docker-registry-auth-vol
              mountPath: "/auth"
              readOnly: true
            # - name: docker-registry-certs-vol
            #   mountPath: "/certs"
            #   readOnly: true
      volumes:
        - name: docker-registry-data
          persistentVolumeClaim:
              claimName: docker-registry-pv-claim
        - name: docker-registry-auth-vol
          secret:
            secretName: docker-registry-auth-secret
        # - name: docker-registry-certs-vol
        #   secret:
        #     secretName: docker-registry-certs-secret
