utilities/k8s-docker-registry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-registry-service
  namespace: docker-registry
  #annotations:
  #    prometheus.io/scrape: 'true'
  #    prometheus.io/path:   /
  #    prometheus.io/port:   '8080'
spec:
  selector: 
    app: docker-registry-server
  type: ClusterIP
  ports:
    - name: registry
      port: 5000
      targetPort: 5000
      protocol: TCP
    # - name: slave
    #   port: 50000
    #   protocol: TCP
    # - name: http
    #   port: 80
    #   targetPort: 8080      
  # type: NodePort  
  # ports:
  #   - port: 8080
  #     targetPort: 8080
  #     nodePort: 32000
