utilities/k8s-docker-registry/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/proxy-body-size: 1000m    
  name: docker-registry
  namespace: docker-registry
spec:
  ingressClassName: nginx
  rules:
  - host: docker-registry.localdomain
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: docker-registry-service
            port:
              number: 5000
